<resources>
    <string name="app_name">框架V1.0</string>

    <string name="no_data">无数据</string>
    <string name="music">音乐</string>
    <string name="backup">云端</string>
    <string name="friends">朋友圈</string>
    <string name="favor">收藏</string>
    <string name="visibility">发现</string>

    <!--Demo-->
    <string name="demo"> \u3000\u3000Java是一门面向对象编程语言，不仅吸收了C++语言的各种优点，还摒弃了C++里难以理解的多继承
        、指针等概念，因此Java语言具有功能强大和简单易用两个特征。Java语言作为静态面向对象编程语言的代表
        ，极好地实现了面向对象理论，允许程序员以优雅的思维方式进行复杂的编程 [1]。Java具有简单性、面向对象、分布式、
        健壮性、安全性、平台独立与可移植性、多线程、动态性等特点 [2] 。
        Java可以编写桌面应用程序、Web应用程序、分布式系统和嵌入式系统应用程序等 [3]  。
    </string>
    <string name="default_app_font_path"/>
    <!-- 通用的 -->
    <string name="common_phone_input_hint">输入手机号码</string>
    <string name="common_phone_input_error">手机号输入不正确</string>
    <string name="common_password_input_error">请输入密码</string>
    <string name="common_code_input_hint">输入验证码</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_code_send_hint">验证码已发送，请注意查收</string>
    <string name="common_step_next">下一步</string>
    <string name="common_step_complete">完成</string>
    <string name="common_step_commit">提交</string>
    <string name="home_exit_hint">再按一次退出</string>
    <!-- 登录 -->
    <string name="login_register">注册</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_text">登录</string>
    <string name="login_other">其他登录方式</string>
    <!-- 提示 -->
    <string name="hint_layout_no_data">亲，暂无数据</string>
    <string name="hint_layout_error_request">亲，请求出错了</string>
    <string name="hint_layout_error_network">亲，没有网络了</string>
    <!-- 注册 -->
    <string name="register_title">注册</string>
    <string name="register_hint">手机号仅用于登录和保护账号安全</string>
    <string name="register_login">登录</string>
    <string name="register_password_hint1">设置6&#8211;18位登录密码</string>
    <string name="register_password_hint2">请再次输入一次密码</string>
    <string name="register_password_input_error">两次密码输入不一致，请重新输入</string>
    <!-- 忘记密码 -->
    <string name="password_forget_title">忘记密码</string>
    <!-- 重置密码 -->
    <string name="password_reset_title">设置登录密码</string>
    <string name="password_reset_phone_hint1">设置6&#8211;18位登录密码</string>
    <string name="password_reset_phone_hint2">重新输入一次密码</string>
    <string name="password_reset_input_error">两次密码输入不一致，请重新输入</string>
    <string name="password_reset_success">密码重置成功</string>
    <!-- 设置 -->
    <string name="setting_title">设置</string>
    <string name="setting_language">语言切换</string>
    <string name="setting_language_simple">简体中文</string>
    <string name="setting_language_complex">繁体中文</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_cache">清空缓存</string>
    <string name="setting_auto">自动登录</string>
    <string name="setting_agreement">隐私协议</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_exit">退出登录</string>
    <!-- 关于 -->
    <string name="about_title">关于我们</string>
    <string name="about_author"><font color="#85b84f">Android</font> 轮子哥</string>
    <string name="about_copyright">Copyright © 2018 &#8211; 2019</string>
    <!--权限-->
    <string name="common_permission_hint">请先授予权限</string>
    <string name="common_permission_fail">授权失败，请手动授予权限</string>
    <!--日志-->
    <string name="crash_error_details">错误详情</string>
    <string name="crash_error_info">错误信息</string>
    <string name="crash_copy_log">复制日志</string>
    <string name="crash_close">关闭</string>
    <!-- 异常捕捉 -->
    <string name="crash_error_hint">发生意外错误\n抱歉，给您带来不便</string>
    <string name="crash_error_restart">重新启动</string>
    <string name="crash_error_log">错误日志</string>
    <!-- 个人资料 -->
    <string name="personal_data_title">个人资料</string>
    <string name="personal_data_head">头像</string>
    <!-- 地区对话框 -->
    <string name="address_title">请选择地区</string>
    <string name="address_hint">请选择</string>
    <!-- 支付密码对话框 -->
    <string name="pay_title">请输入支付密码</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <!-- 日期对话框 -->
    <string name="date_title">请选择日期</string>
    <!-- 时间对话框 -->
    <string name="time_title">请选择时间</string>
    <string name="common_year">年</string>
    <string name="common_month">月</string>
    <string name="common_day">日</string>
    <!-- 分享对话框 -->
    <string name="share_title">分享到&#8230;</string>
    <!-- 升级对话框 -->
    <string name="update_app">升级</string>
    <string name="update_download_fail">启动下载失败</string>
    <string name="update_permission_hint">必须先要授予权限才能正常下载更新哦</string>
    <string name="update_status_running">下载中</string>
    <string name="update_status_successful">立即安装</string>
    <string name="update_status_failed">下载失败</string>
    <string name="update_status_paused">暂停中</string>
    <string name="update_status_pending">等待下载</string>
    <string name="update_no_update">当前已是最新版本</string>
    <!--时间-->
    <string name="common_hour">时</string>
    <string name="common_minute">分</string>
    <string name="common_second">秒</string>
    <!--支付宝-->
    <string name="demo_info_text">重要说明: \n\n本 Demo 为了方便向商户展示支付宝的支付流程，所以订单信息的加签过程放在客户端完成。\n在商户的真实App内，为了防止商户私密数据泄露，引发资金损失和身份冒用等各种安全风险，商户私钥 RSA_PRIVATE 等数据严禁放在客户端，订单信息的加签过程也务必放在服务端完成。\n若商户接入时不遵照此说明而造成损失，需自行承担。</string>
    <string name="pay_with_alipay">支付宝支付 Demo</string>
    <string name="pay_with_alipay_hk">HK 支付宝支付 Demo</string>
    <string name="auth_with_alipay">支付宝授权 Demo</string>
    <string name="web_to_native">网页支付转 native 支付 Demo</string>
    <string name="check_sdk_version">支付宝 SDK 版本</string>
    <string name="pay_success">支付成功:</string>
    <string name="pay_failed">支付失败:</string>
    <string name="auth_success">授权成功:</string>
    <string name="auth_failed">授权失败:</string>
    <string name="error_missing_appid_rsa_private">错误: 需要配置 PayDemoActivity 中的 APPID 和 RSA_PRIVATE</string>
    <string name="error_missing_hk_partner_seller_rsa_private">错误：需要配置 OrderUtils1_0_HK 中的 PARTNER、SELLER 和 RSA_PRIVATE</string>
    <string name="pay_result">支付结果:</string>
    <string name="error_auth_missing_partner_appid_rsa_private_target_id">错误: 需要配置PARTNER |APP_ID| RSA_PRIVATE| TARGET_ID</string>
    <string name="alipay_sdk_version_is">支付宝 SDK 版本:</string>
    <string name="confirm">确定</string>
    <string name="error_missing_h5_pay_url">必须配置需要打开的url 站点，请在PayDemoActivity类的h5Pay中配置</string>
    <string name="error">错误</string>
    <string name="pay_cross_border">境外收单支付 Demo</string>
    <string name="error_missing_global_partner_seller_rsa_private">错误：需要配置 OrderUtils1_0_Global 中的 PARTNER、SELLER 和 RSA_PRIVATE</string>
    <string name="payment_inst_hk">付款方: HK</string>
    <string name="payment_inst_cn">付款方: CN</string>

    <string name="personal_data_id">用户ID</string>
    <string name="personal_data_name">昵称</string>
    <string name="personal_data_name_hint">设置昵称</string>

    <string name="personal_data_address">地区</string>
    <string name="personal_data_address_hint">请选择</string>

    <string name="personal_data_phone">地图</string>
    <string name="personal_data_phone_hint">立即绑定</string>

    <string name="common_loading">加载中&#8230;</string>
</resources>
