<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.paper.boat.zrdx.ui.actvity.login.LoginActivity">

    <com.hjq.bar.TitleBar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backButton="false"
        app:barStyle="transparent"
        app:rightColor="@color/blue"
        app:rightTitle="注册" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_120"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/dream_ico" />

    <LinearLayout
        android:id="@+id/ll_login_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.paper.boat.zrdx.view.edit.ClearEditText
            android:id="@+id/et_login_phone"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:hint="@string/common_phone_input_hint"
            android:inputType="textVisiblePassword"
            android:singleLine="true"
            app:regexType="mobile" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp" />

        <com.paper.boat.zrdx.view.edit.PasswordEditText
            android:id="@+id/et_login_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:hint="@string/common_password_input_error"
            android:maxLength="20"
            android:maxLines="1" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="60dp"
            android:text="@string/login_forget"
            android:textColor="@color/colorAccent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_commit"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:text="@string/login_text" />

    </LinearLayout>

    <View
        android:id="@+id/v_login_blank"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="5" />

    <LinearLayout
        android:id="@+id/ll_login_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            style="@style/HorizontalLineStyle"
            android:layout_width="60dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/login_other"
            android:textColor="@color/black50" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_width="60dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.paper.boat.zrdx.widget.ScaleImageView
            android:id="@+id/iv_login_qq"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp"
            android:layout_weight="1"
            android:src="@drawable/ic_login_qq"
            app:scaleRatio="1.2" />

        <com.paper.boat.zrdx.widget.ScaleImageView
            android:id="@+id/iv_login_wx"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp"
            android:layout_weight="1"
            android:src="@drawable/ic_login_wx"
            app:scaleRatio="1.2" />
    </LinearLayout>

</LinearLayout>
